# TimeIt

./: CMakeLists.txt  LICENSE  README.md
.github/workflow/: macos_x86_64.yml  ubuntu_arm.yml  windows_arm.yml  windows_x86_64.yml
.github/workflows/: macos_arm.yml  ubuntu_X86_64.yml  ubuntu_riscv.yml  windows_arm.yml  windows_x86_64.yml
example/: CMakeLists.txt  main.cpp
include/: TimeFunction.hpp  TimeIt.hpp
src/: TimeFunction.cpp  TimeIt.cpp
test/: CMakeLists.txt  TimeFunctionTest.cpp  TimeItTest.cpp
